// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`waterfall_helpers getWaterfall should return full waterfall 1`] = `
Object {
  "duration": 49660,
  "entryTransaction": Object {
    "processor": Object {
      "event": "transaction",
    },
    "service": Object {
      "name": "opbeans-node",
    },
    "timestamp": Object {
      "us": 1549324795784006,
    },
    "trace": Object {
      "id": "myTraceId",
    },
    "transaction": Object {
      "duration": Object {
        "us": 49660,
      },
      "id": "myTransactionId1",
      "name": "GET /api",
    },
  },
  "errorCount": 1,
  "errorCountByTransactionId": Object {
    "myTransactionId1": 2,
    "myTransactionId2": 3,
  },
  "getTransactionById": [Function],
  "itemsById": Object {
    "error1": Object {
      "childIds": Array [],
      "docType": "error",
      "duration": 0,
      "error": Object {
        "agent": Object {
          "name": "ruby",
          "version": "2",
        },
        "error": Object {
          "grouping_key": "errorGroupingKey1",
          "id": "error1",
          "log": Object {
            "message": "error message",
          },
        },
        "parent": Object {
          "id": "myTransactionId1",
        },
        "processor": Object {
          "event": "error",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "timestamp": Object {
          "us": 1549324795810000,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "id": "myTransactionId1",
        },
      },
      "id": "error1",
      "message": "error message",
      "offset": 25994,
      "parentId": "myTransactionId1",
      "serviceColor": "#00b3a4",
      "serviceName": "opbeans-ruby",
      "skew": 0,
      "timestamp": 1549324795810000,
    },
    "mySpanIdA": Object {
      "childIds": Array [
        "mySpanIdB",
        "mySpanIdC",
      ],
      "docType": "span",
      "duration": 6161,
      "id": "mySpanIdA",
      "name": "Api::ProductsController#index",
      "offset": 40498,
      "parentId": "myTransactionId2",
      "serviceName": "opbeans-ruby",
      "skew": 0,
      "span": Object {
        "parent": Object {
          "id": "myTransactionId2",
        },
        "processor": Object {
          "event": "span",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "span": Object {
          "duration": Object {
            "us": 6161,
          },
          "id": "mySpanIdA",
          "name": "Api::ProductsController#index",
        },
        "timestamp": Object {
          "us": 1549324795824504,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "id": "myTransactionId2",
        },
      },
      "timestamp": 1549324795824504,
    },
    "mySpanIdB": Object {
      "childIds": Array [],
      "docType": "span",
      "duration": 481,
      "id": "mySpanIdB",
      "name": "SELECT FROM products",
      "offset": 41627,
      "parentId": "mySpanIdA",
      "serviceName": "opbeans-ruby",
      "skew": 0,
      "span": Object {
        "parent": Object {
          "id": "mySpanIdA",
        },
        "processor": Object {
          "event": "span",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "span": Object {
          "duration": Object {
            "us": 481,
          },
          "id": "mySpanIdB",
          "name": "SELECT FROM products",
        },
        "timestamp": Object {
          "us": 1549324795825633,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "id": "myTransactionId2",
        },
      },
      "timestamp": 1549324795825633,
    },
    "mySpanIdC": Object {
      "childIds": Array [],
      "docType": "span",
      "duration": 532,
      "id": "mySpanIdC",
      "name": "SELECT FROM product",
      "offset": 43899,
      "parentId": "mySpanIdA",
      "serviceName": "opbeans-ruby",
      "skew": 0,
      "span": Object {
        "parent": Object {
          "id": "mySpanIdA",
        },
        "processor": Object {
          "event": "span",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "span": Object {
          "duration": Object {
            "us": 532,
          },
          "id": "mySpanIdC",
          "name": "SELECT FROM product",
        },
        "timestamp": Object {
          "us": 1549324795827905,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "id": "myTransactionId2",
        },
      },
      "timestamp": 1549324795827905,
    },
    "mySpanIdD": Object {
      "childIds": Array [
        "myTransactionId2",
      ],
      "docType": "span",
      "duration": 47557,
      "id": "mySpanIdD",
      "name": "GET opbeans-ruby:3000/api/products",
      "offset": 1754,
      "parentId": "myTransactionId1",
      "serviceName": "opbeans-node",
      "skew": 0,
      "span": Object {
        "parent": Object {
          "id": "myTransactionId1",
        },
        "processor": Object {
          "event": "span",
        },
        "service": Object {
          "name": "opbeans-node",
        },
        "span": Object {
          "duration": Object {
            "us": 47557,
          },
          "id": "mySpanIdD",
          "name": "GET opbeans-ruby:3000/api/products",
        },
        "timestamp": Object {
          "us": 1549324795785760,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "id": "myTransactionId1",
        },
      },
      "timestamp": 1549324795785760,
    },
    "myTransactionId1": Object {
      "childIds": Array [
        "mySpanIdD",
        "error1",
      ],
      "docType": "transaction",
      "duration": 49660,
      "errorCount": 2,
      "id": "myTransactionId1",
      "name": "GET /api",
      "offset": 0,
      "parentId": undefined,
      "serviceName": "opbeans-node",
      "skew": 0,
      "timestamp": 1549324795784006,
      "transaction": Object {
        "processor": Object {
          "event": "transaction",
        },
        "service": Object {
          "name": "opbeans-node",
        },
        "timestamp": Object {
          "us": 1549324795784006,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "duration": Object {
            "us": 49660,
          },
          "id": "myTransactionId1",
          "name": "GET /api",
        },
      },
    },
    "myTransactionId2": Object {
      "childIds": Array [
        "mySpanIdA",
      ],
      "docType": "transaction",
      "duration": 8634,
      "errorCount": 3,
      "id": "myTransactionId2",
      "name": "Api::ProductsController#index",
      "offset": 39298,
      "parentId": "mySpanIdD",
      "serviceName": "opbeans-ruby",
      "skew": 0,
      "timestamp": 1549324795823304,
      "transaction": Object {
        "parent": Object {
          "id": "mySpanIdD",
        },
        "processor": Object {
          "event": "transaction",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "timestamp": Object {
          "us": 1549324795823304,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "duration": Object {
            "us": 8634,
          },
          "id": "myTransactionId2",
          "marks": Object {
            "agent": Object {
              "domComplete": 383,
              "domInteractive": 382,
              "timeToFirstByte": 14,
            },
          },
          "name": "Api::ProductsController#index",
        },
      },
    },
  },
  "orderedItems": Array [
    Object {
      "childIds": Array [
        "mySpanIdD",
        "error1",
      ],
      "docType": "transaction",
      "duration": 49660,
      "errorCount": 2,
      "id": "myTransactionId1",
      "name": "GET /api",
      "offset": 0,
      "parentId": undefined,
      "serviceName": "opbeans-node",
      "skew": 0,
      "timestamp": 1549324795784006,
      "transaction": Object {
        "processor": Object {
          "event": "transaction",
        },
        "service": Object {
          "name": "opbeans-node",
        },
        "timestamp": Object {
          "us": 1549324795784006,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "duration": Object {
            "us": 49660,
          },
          "id": "myTransactionId1",
          "name": "GET /api",
        },
      },
    },
    Object {
      "childIds": Array [
        "myTransactionId2",
      ],
      "docType": "span",
      "duration": 47557,
      "id": "mySpanIdD",
      "name": "GET opbeans-ruby:3000/api/products",
      "offset": 1754,
      "parentId": "myTransactionId1",
      "serviceName": "opbeans-node",
      "skew": 0,
      "span": Object {
        "parent": Object {
          "id": "myTransactionId1",
        },
        "processor": Object {
          "event": "span",
        },
        "service": Object {
          "name": "opbeans-node",
        },
        "span": Object {
          "duration": Object {
            "us": 47557,
          },
          "id": "mySpanIdD",
          "name": "GET opbeans-ruby:3000/api/products",
        },
        "timestamp": Object {
          "us": 1549324795785760,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "id": "myTransactionId1",
        },
      },
      "timestamp": 1549324795785760,
    },
    Object {
      "childIds": Array [
        "mySpanIdA",
      ],
      "docType": "transaction",
      "duration": 8634,
      "errorCount": 3,
      "id": "myTransactionId2",
      "name": "Api::ProductsController#index",
      "offset": 39298,
      "parentId": "mySpanIdD",
      "serviceName": "opbeans-ruby",
      "skew": 0,
      "timestamp": 1549324795823304,
      "transaction": Object {
        "parent": Object {
          "id": "mySpanIdD",
        },
        "processor": Object {
          "event": "transaction",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "timestamp": Object {
          "us": 1549324795823304,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "duration": Object {
            "us": 8634,
          },
          "id": "myTransactionId2",
          "marks": Object {
            "agent": Object {
              "domComplete": 383,
              "domInteractive": 382,
              "timeToFirstByte": 14,
            },
          },
          "name": "Api::ProductsController#index",
        },
      },
    },
    Object {
      "childIds": Array [
        "mySpanIdB",
        "mySpanIdC",
      ],
      "docType": "span",
      "duration": 6161,
      "id": "mySpanIdA",
      "name": "Api::ProductsController#index",
      "offset": 40498,
      "parentId": "myTransactionId2",
      "serviceName": "opbeans-ruby",
      "skew": 0,
      "span": Object {
        "parent": Object {
          "id": "myTransactionId2",
        },
        "processor": Object {
          "event": "span",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "span": Object {
          "duration": Object {
            "us": 6161,
          },
          "id": "mySpanIdA",
          "name": "Api::ProductsController#index",
        },
        "timestamp": Object {
          "us": 1549324795824504,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "id": "myTransactionId2",
        },
      },
      "timestamp": 1549324795824504,
    },
    Object {
      "childIds": Array [],
      "docType": "span",
      "duration": 481,
      "id": "mySpanIdB",
      "name": "SELECT FROM products",
      "offset": 41627,
      "parentId": "mySpanIdA",
      "serviceName": "opbeans-ruby",
      "skew": 0,
      "span": Object {
        "parent": Object {
          "id": "mySpanIdA",
        },
        "processor": Object {
          "event": "span",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "span": Object {
          "duration": Object {
            "us": 481,
          },
          "id": "mySpanIdB",
          "name": "SELECT FROM products",
        },
        "timestamp": Object {
          "us": 1549324795825633,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "id": "myTransactionId2",
        },
      },
      "timestamp": 1549324795825633,
    },
    Object {
      "childIds": Array [],
      "docType": "span",
      "duration": 532,
      "id": "mySpanIdC",
      "name": "SELECT FROM product",
      "offset": 43899,
      "parentId": "mySpanIdA",
      "serviceName": "opbeans-ruby",
      "skew": 0,
      "span": Object {
        "parent": Object {
          "id": "mySpanIdA",
        },
        "processor": Object {
          "event": "span",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "span": Object {
          "duration": Object {
            "us": 532,
          },
          "id": "mySpanIdC",
          "name": "SELECT FROM product",
        },
        "timestamp": Object {
          "us": 1549324795827905,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "id": "myTransactionId2",
        },
      },
      "timestamp": 1549324795827905,
    },
    Object {
      "childIds": Array [],
      "docType": "error",
      "duration": 0,
      "error": Object {
        "agent": Object {
          "name": "ruby",
          "version": "2",
        },
        "error": Object {
          "grouping_key": "errorGroupingKey1",
          "id": "error1",
          "log": Object {
            "message": "error message",
          },
        },
        "parent": Object {
          "id": "myTransactionId1",
        },
        "processor": Object {
          "event": "error",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "timestamp": Object {
          "us": 1549324795810000,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "id": "myTransactionId1",
        },
      },
      "id": "error1",
      "message": "error message",
      "offset": 25994,
      "parentId": "myTransactionId1",
      "serviceColor": "#00b3a4",
      "serviceName": "opbeans-ruby",
      "skew": 0,
      "timestamp": 1549324795810000,
    },
  ],
  "serviceColors": Object {
    "opbeans-node": "#3185fc",
    "opbeans-ruby": "#00b3a4",
  },
  "traceRoot": Object {
    "processor": Object {
      "event": "transaction",
    },
    "service": Object {
      "name": "opbeans-node",
    },
    "timestamp": Object {
      "us": 1549324795784006,
    },
    "trace": Object {
      "id": "myTraceId",
    },
    "transaction": Object {
      "duration": Object {
        "us": 49660,
      },
      "id": "myTransactionId1",
      "name": "GET /api",
    },
  },
  "traceRootDuration": 49660,
}
`;

exports[`waterfall_helpers getWaterfall should return partial waterfall 1`] = `
Object {
  "duration": 8634,
  "entryTransaction": Object {
    "parent": Object {
      "id": "mySpanIdD",
    },
    "processor": Object {
      "event": "transaction",
    },
    "service": Object {
      "name": "opbeans-ruby",
    },
    "timestamp": Object {
      "us": 1549324795823304,
    },
    "trace": Object {
      "id": "myTraceId",
    },
    "transaction": Object {
      "duration": Object {
        "us": 8634,
      },
      "id": "myTransactionId2",
      "marks": Object {
        "agent": Object {
          "domComplete": 383,
          "domInteractive": 382,
          "timeToFirstByte": 14,
        },
      },
      "name": "Api::ProductsController#index",
    },
  },
  "errorCount": 0,
  "errorCountByTransactionId": Object {
    "myTransactionId1": 2,
    "myTransactionId2": 3,
  },
  "getTransactionById": [Function],
  "itemsById": Object {
    "error1": Object {
      "docType": "error",
      "duration": 0,
      "error": Object {
        "agent": Object {
          "name": "ruby",
          "version": "2",
        },
        "error": Object {
          "grouping_key": "errorGroupingKey1",
          "id": "error1",
          "log": Object {
            "message": "error message",
          },
        },
        "parent": Object {
          "id": "myTransactionId1",
        },
        "processor": Object {
          "event": "error",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "timestamp": Object {
          "us": 1549324795810000,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "id": "myTransactionId1",
        },
      },
      "id": "error1",
      "message": "error message",
      "offset": 0,
      "parentId": "myTransactionId1",
      "serviceName": "opbeans-ruby",
      "skew": 0,
      "timestamp": 1549324795810000,
    },
    "mySpanIdA": Object {
      "childIds": Array [
        "mySpanIdB",
        "mySpanIdC",
      ],
      "docType": "span",
      "duration": 6161,
      "id": "mySpanIdA",
      "name": "Api::ProductsController#index",
      "offset": 1200,
      "parentId": "myTransactionId2",
      "serviceName": "opbeans-ruby",
      "skew": 0,
      "span": Object {
        "parent": Object {
          "id": "myTransactionId2",
        },
        "processor": Object {
          "event": "span",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "span": Object {
          "duration": Object {
            "us": 6161,
          },
          "id": "mySpanIdA",
          "name": "Api::ProductsController#index",
        },
        "timestamp": Object {
          "us": 1549324795824504,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "id": "myTransactionId2",
        },
      },
      "timestamp": 1549324795824504,
    },
    "mySpanIdB": Object {
      "childIds": Array [],
      "docType": "span",
      "duration": 481,
      "id": "mySpanIdB",
      "name": "SELECT FROM products",
      "offset": 2329,
      "parentId": "mySpanIdA",
      "serviceName": "opbeans-ruby",
      "skew": 0,
      "span": Object {
        "parent": Object {
          "id": "mySpanIdA",
        },
        "processor": Object {
          "event": "span",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "span": Object {
          "duration": Object {
            "us": 481,
          },
          "id": "mySpanIdB",
          "name": "SELECT FROM products",
        },
        "timestamp": Object {
          "us": 1549324795825633,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "id": "myTransactionId2",
        },
      },
      "timestamp": 1549324795825633,
    },
    "mySpanIdC": Object {
      "childIds": Array [],
      "docType": "span",
      "duration": 532,
      "id": "mySpanIdC",
      "name": "SELECT FROM product",
      "offset": 4601,
      "parentId": "mySpanIdA",
      "serviceName": "opbeans-ruby",
      "skew": 0,
      "span": Object {
        "parent": Object {
          "id": "mySpanIdA",
        },
        "processor": Object {
          "event": "span",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "span": Object {
          "duration": Object {
            "us": 532,
          },
          "id": "mySpanIdC",
          "name": "SELECT FROM product",
        },
        "timestamp": Object {
          "us": 1549324795827905,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "id": "myTransactionId2",
        },
      },
      "timestamp": 1549324795827905,
    },
    "mySpanIdD": Object {
      "docType": "span",
      "duration": 47557,
      "id": "mySpanIdD",
      "name": "GET opbeans-ruby:3000/api/products",
      "offset": 0,
      "parentId": "myTransactionId1",
      "serviceName": "opbeans-node",
      "skew": 0,
      "span": Object {
        "parent": Object {
          "id": "myTransactionId1",
        },
        "processor": Object {
          "event": "span",
        },
        "service": Object {
          "name": "opbeans-node",
        },
        "span": Object {
          "duration": Object {
            "us": 47557,
          },
          "id": "mySpanIdD",
          "name": "GET opbeans-ruby:3000/api/products",
        },
        "timestamp": Object {
          "us": 1549324795785760,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "id": "myTransactionId1",
        },
      },
      "timestamp": 1549324795785760,
    },
    "myTransactionId1": Object {
      "docType": "transaction",
      "duration": 49660,
      "errorCount": 2,
      "id": "myTransactionId1",
      "name": "GET /api",
      "offset": 0,
      "parentId": undefined,
      "serviceName": "opbeans-node",
      "skew": 0,
      "timestamp": 1549324795784006,
      "transaction": Object {
        "processor": Object {
          "event": "transaction",
        },
        "service": Object {
          "name": "opbeans-node",
        },
        "timestamp": Object {
          "us": 1549324795784006,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "duration": Object {
            "us": 49660,
          },
          "id": "myTransactionId1",
          "name": "GET /api",
        },
      },
    },
    "myTransactionId2": Object {
      "childIds": Array [
        "mySpanIdA",
      ],
      "docType": "transaction",
      "duration": 8634,
      "errorCount": 3,
      "id": "myTransactionId2",
      "name": "Api::ProductsController#index",
      "offset": 0,
      "parentId": "mySpanIdD",
      "serviceName": "opbeans-ruby",
      "skew": 0,
      "timestamp": 1549324795823304,
      "transaction": Object {
        "parent": Object {
          "id": "mySpanIdD",
        },
        "processor": Object {
          "event": "transaction",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "timestamp": Object {
          "us": 1549324795823304,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "duration": Object {
            "us": 8634,
          },
          "id": "myTransactionId2",
          "marks": Object {
            "agent": Object {
              "domComplete": 383,
              "domInteractive": 382,
              "timeToFirstByte": 14,
            },
          },
          "name": "Api::ProductsController#index",
        },
      },
    },
  },
  "orderedItems": Array [
    Object {
      "childIds": Array [
        "mySpanIdA",
      ],
      "docType": "transaction",
      "duration": 8634,
      "errorCount": 3,
      "id": "myTransactionId2",
      "name": "Api::ProductsController#index",
      "offset": 0,
      "parentId": "mySpanIdD",
      "serviceName": "opbeans-ruby",
      "skew": 0,
      "timestamp": 1549324795823304,
      "transaction": Object {
        "parent": Object {
          "id": "mySpanIdD",
        },
        "processor": Object {
          "event": "transaction",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "timestamp": Object {
          "us": 1549324795823304,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "duration": Object {
            "us": 8634,
          },
          "id": "myTransactionId2",
          "marks": Object {
            "agent": Object {
              "domComplete": 383,
              "domInteractive": 382,
              "timeToFirstByte": 14,
            },
          },
          "name": "Api::ProductsController#index",
        },
      },
    },
    Object {
      "childIds": Array [
        "mySpanIdB",
        "mySpanIdC",
      ],
      "docType": "span",
      "duration": 6161,
      "id": "mySpanIdA",
      "name": "Api::ProductsController#index",
      "offset": 1200,
      "parentId": "myTransactionId2",
      "serviceName": "opbeans-ruby",
      "skew": 0,
      "span": Object {
        "parent": Object {
          "id": "myTransactionId2",
        },
        "processor": Object {
          "event": "span",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "span": Object {
          "duration": Object {
            "us": 6161,
          },
          "id": "mySpanIdA",
          "name": "Api::ProductsController#index",
        },
        "timestamp": Object {
          "us": 1549324795824504,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "id": "myTransactionId2",
        },
      },
      "timestamp": 1549324795824504,
    },
    Object {
      "childIds": Array [],
      "docType": "span",
      "duration": 481,
      "id": "mySpanIdB",
      "name": "SELECT FROM products",
      "offset": 2329,
      "parentId": "mySpanIdA",
      "serviceName": "opbeans-ruby",
      "skew": 0,
      "span": Object {
        "parent": Object {
          "id": "mySpanIdA",
        },
        "processor": Object {
          "event": "span",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "span": Object {
          "duration": Object {
            "us": 481,
          },
          "id": "mySpanIdB",
          "name": "SELECT FROM products",
        },
        "timestamp": Object {
          "us": 1549324795825633,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "id": "myTransactionId2",
        },
      },
      "timestamp": 1549324795825633,
    },
    Object {
      "childIds": Array [],
      "docType": "span",
      "duration": 532,
      "id": "mySpanIdC",
      "name": "SELECT FROM product",
      "offset": 4601,
      "parentId": "mySpanIdA",
      "serviceName": "opbeans-ruby",
      "skew": 0,
      "span": Object {
        "parent": Object {
          "id": "mySpanIdA",
        },
        "processor": Object {
          "event": "span",
        },
        "service": Object {
          "name": "opbeans-ruby",
        },
        "span": Object {
          "duration": Object {
            "us": 532,
          },
          "id": "mySpanIdC",
          "name": "SELECT FROM product",
        },
        "timestamp": Object {
          "us": 1549324795827905,
        },
        "trace": Object {
          "id": "myTraceId",
        },
        "transaction": Object {
          "id": "myTransactionId2",
        },
      },
      "timestamp": 1549324795827905,
    },
    Object {
      "docType": "agentMark",
      "id": "domInteractive",
      "name": "domInteractive",
      "offset": 382000,
    },
    Object {
      "docType": "agentMark",
      "id": "domComplete",
      "name": "domComplete",
      "offset": 383000,
    },
    Object {
      "docType": "agentMark",
      "id": "timeToFirstByte",
      "name": "timeToFirstByte",
      "offset": 14000,
    },
  ],
  "serviceColors": Object {
    "opbeans-ruby": "#3185fc",
  },
  "traceRoot": Object {
    "processor": Object {
      "event": "transaction",
    },
    "service": Object {
      "name": "opbeans-node",
    },
    "timestamp": Object {
      "us": 1549324795784006,
    },
    "trace": Object {
      "id": "myTraceId",
    },
    "transaction": Object {
      "duration": Object {
        "us": 49660,
      },
      "id": "myTransactionId1",
      "name": "GET /api",
    },
  },
  "traceRootDuration": 49660,
}
`;

exports[`waterfall_helpers getWaterfallItems should handle cyclic references 1`] = `
Array [
  Object {
    "childIds": Array [
      "a",
    ],
    "id": "a",
    "offset": 0,
    "skew": 0,
    "timestamp": 10,
  },
  Object {
    "childIds": Array [
      "a",
    ],
    "id": "a",
    "offset": 10,
    "parentId": "a",
    "skew": undefined,
    "timestamp": 20,
  },
]
`;

exports[`waterfall_helpers getWaterfallItems should order items correctly 1`] = `
Array [
  Object {
    "childIds": Array [
      "b2",
      "b",
    ],
    "docType": "transaction",
    "duration": 9480,
    "errorCount": 0,
    "id": "a",
    "name": "APIRestController#products",
    "offset": 0,
    "serviceName": "opbeans-java",
    "skew": 0,
    "timestamp": 1536763736366000,
    "transaction": Object {},
  },
  Object {
    "childIds": Array [],
    "docType": "span",
    "duration": 4694,
    "id": "b2",
    "name": "GET [0:0:0:0:0:0:0:1]",
    "offset": 1000,
    "parentId": "a",
    "serviceName": "opbeans-java",
    "skew": 0,
    "span": Object {
      "transaction": Object {
        "id": "a",
      },
    },
    "timestamp": 1536763736367000,
  },
  Object {
    "childIds": Array [
      "c",
    ],
    "docType": "span",
    "duration": 4694,
    "id": "b",
    "name": "GET [0:0:0:0:0:0:0:1]",
    "offset": 2000,
    "parentId": "a",
    "serviceName": "opbeans-java",
    "skew": 0,
    "span": Object {
      "transaction": Object {
        "id": "a",
      },
    },
    "timestamp": 1536763736368000,
  },
  Object {
    "childIds": Array [
      "d",
    ],
    "docType": "transaction",
    "duration": 3581,
    "errorCount": 0,
    "id": "c",
    "name": "APIRestController#productsRemote",
    "offset": 3000,
    "parentId": "b",
    "serviceName": "opbeans-java",
    "skew": 0,
    "timestamp": 1536763736369000,
    "transaction": Object {},
  },
  Object {
    "childIds": Array [],
    "docType": "span",
    "duration": 210,
    "id": "d",
    "name": "SELECT",
    "offset": 5000,
    "parentId": "c",
    "serviceName": "opbeans-java",
    "skew": 0,
    "span": Object {
      "transaction": Object {
        "id": "c",
      },
    },
    "timestamp": 1536763736371000,
  },
]
`;
